public/proxy-report.css
/* ... */
.multi_level_chart_section .marginal_level {
    background-color: #fdb913;
}

.multi_level_chart_section .unsafe_level {
    background-color: #a43a3e;
}

.multi_level_chart_section .user_marker {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 8px;
    background-color: #3e3e3e;
    z-index: 5;
    border-radius: 1px;
}

.multi_level_chart_section .value_col {
    font-weight: 500;
    font-size: 18px;
    color: #93979a;
    width: 70px;
    text-align: right;
    letter-spacing: 0;
}

.multi_level_chart_section .scale_container {
    display: flex;
    align-items: flex-start;
}

.multi_level_chart_section .scale_placeholder_left {
    width: 140px;
}

.multi_level_chart_section .scale_placeholder_right {
    width: 70px;
}

.multi_level_chart_section .scale_main {
    flex-grow: 1;
    padding: 0 10px;
}

.multi_level_chart_section .scale_tick_box {
    width: 100%;
    height: 10px;
    border: 2px solid #d1d1d1;
    border-top: none;
    margin-bottom: 6px;
}

.multi_level_chart_section .scale_labels {
    display: flex;
    justify-content: space-between;
}

.multi_level_chart_section .scale_labels span {
    font-size: 14px;
    color: #93979a;
    width: 20px;
    text-align: center;
    letter-spacing: 0;
}

.multi_level_chart_section .spacer_div {
    height: 80px;
}

.multi_level_chart_section .legend_box {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    gap: 40px;
    margin-top: 60px;
}

.multi_level_chart_section .legend_item {
    display: flex;
    align-items: center;
    font-weight: 500;
    font-size: 15px;
    color: #93979a;
    letter-spacing: 0;
}

.multi_level_chart_section .legend_item .color_box {
    width: 40px;
    min-width: 40px;
    height: 40px;
    margin-right: 10px;
    border-radius: 7px;
}

.multi_level_chart_section .legend_item .user_level {
    background-color: #3e3e3e;
}

.multi_level_chart_section .report_details_section {
    padding: 0 !important;
}

.multi_level_chart_section .oil_breakdown_locked_preview {
    display: block;
    width: 100%;
}

.multi_level_chart_section .heavy_metals_breakdown_locked_preview {
    display: block;
    width: 100%;
    max-width: 900px;
    margin: 0 auto;
    filter: blur(1.5px);
    opacity: 0.85;
}

@media (max-width: 1199px) {

    .multi_level_chart_section {
        padding: 60px 0;
    }

    .multi_level_chart_section .spacer_div {
        height: 70px;
    }

    .multi_level_chart_section .legend_box {
        margin-top: 50px;
    }

}

@media (max-width: 991px) {

    .multi_level_chart_section {
        padding: 50px 0;
    }

    .multi_level_chart_section .label_col,
    .multi_level_chart_section .scale_placeholder_left {
        width: 100px;
        font-size: 18px;
    }

    .multi_level_chart_section .spacer_div {
        height: 60px;
    }

    .multi_level_chart_section .legend_box {
        margin-top: 40px;
        gap: 30px;
    }

    .multi_level_chart_section .legend_item .color_box {
        width: 35px;
        min-width: 35px;
        height: 35px;
        margin-right: 5px;
    }
}

@media (max-width: 767px) {

    .multi_level_chart_section {
        padding: 40px 0;
    }

    .multi_level_chart_section .chart_row {
        flex-wrap: wrap;
        margin-bottom: 20px;
    }

    .multi_level_chart_section .label_col {
        width: 100%;
        margin-bottom: 3px;
    }

    .multi_level_chart_section .bar_col {
        width: calc(100% - 60px);
        padding-left: 0;
    }

    .multi_level_chart_section .bar_wrapper {
        height: 35px;
    }

    .multi_level_chart_section .value_col {
        width: 60px;
        font-size: 16px;
    }

    .multi_level_chart_section .scale_placeholder_left,
    .multi_level_chart_section div.scale_placeholder_left {
        display: none;
    }

    .multi_level_chart_section .scale_main {
        padding-left: 0;
    }

    .multi_level_chart_section .scale_placeholder_right {
        width: 60px;
    }

    .multi_level_chart_section .scale_labels span {
        font-size: 11px;
    }

    .multi_level_chart_section .spacer_div {
        height: 50px;
    }

    .multi_level_chart_section .chart_group[data-max="450"] .scale_labels span:nth-child(even) {
        display: none;
    }

    .multi_level_chart_section .legend_box {
        justify-content: flex-start;
        gap: 15px;
        margin-top: 30px;
    }

    .multi_level_chart_section .legend_item {
        width: calc(50% - 15px);
        font-size: 13px;
        line-height: 18px;
    }

    .multi_level_chart_section .legend_item .color_box {
        width: 30px;
        min-width: 30px;
        height: 30px;
    }
}

/* Oil Contaminants Section CSS */

.oil_contaminants_section .oil_main_heading {
    font-weight: 700;
    font-size: 64px;
    line-height: 1.2;
    color: #a52a2a;
    margin-bottom: 30px;
}

.oil_contaminants_section .oil_info_card {
    display: inline-block;
    background-color: #727b6f;
    border-radius: 0 0 0 20px;
    padding: 30px;
    min-width: 450px;
}

.oil_contaminants_section .oil_contaminants_locked_preview {
    display: block;
    width: 100%;
}

.oil_contaminants_section .oil_label {
    display: block;
    font-weight: 400;
    font-size: 36px;
    line-height: 46px;
    color: #ffffff;
    margin-bottom: 10px;
}

.oil_contaminants_section .oil_value_row {
    display: flex;
    align-items: center;
    gap: 30px;
}

.oil_contaminants_section .oil_found_text,
.oil_contaminants_section .oil_ppm_value {
    font-weight: 700;
    font-size: 44px;
    line-height: 54px;
    color: #ffffff;
}
/* ... */

